Fix the role cards issues on mobile

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -111,6 +111,10 @@
   color: #fff;
 }
 
+.role img {
+  width: 100%;
+}
+
 /*confirm css*/
 .text-bold {
   font-weight: bold !important;
